# One-Billion-Row-Practice

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
Readers/: dask_reader.py  duckdb_reader.py  pandas_reader.py  polars_reader.py  python_reader.py
data_generator/: data_generator.py
reporting/: save_result.py
