[tool.poetry]
name = "one-billion-row-practice"
version = "0.1.0"
description = ""
authors = ["jdbernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
