[tool.poetry]
name = "one-billion-row-practice"
version = "0.1.0"
description = ""
authors = ["jdbernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^26.0.0"
pandas = "^2.2.2"
tdqm = "^0.0.1"
duckdb = "^1.0.0"
dask = {extras = ["dataframe"], version = "^2024.7.1"}
polars = "^1.2.1"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
